Fix word-wrap of draggable elements.

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -33,6 +33,7 @@
   position: relative;
   height: 0;
   width: 100%;
+  padding-right: 400px;
   z-index: 1000;
 }
 
